# SHAPED_test_2

./: Dockerfile  READ.md  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
SHAPED_test_2/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/exams/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
app/exams/migrations/: 0001_initial.py
app/patients/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
app/patients/migrations/: 0001_initial.py
