[tool.poetry]
name = "shaped-test-2"
version = "0.1.0"
description = ""
authors = ["Marcelo Livramento <molivramento@gmail.com>"]
readme = "README.md"
packages = [{include = "shaped_test_2"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
celery = "^5.2.7"
redis = "^4.5.5"
drf-spectacular = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
